# dagler

./: .gitignore  CLAUDE.md  NORTH_STAR.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  __main__.py  core.py  scenarios.py
src/dagler/: __init__.py  cli.py  dag.py  dispatch.py  exceptions.py  inject.py  run.py  task.py
tests/: conftest.py  test_cli.py  test_dag.py  test_dagrun.py  test_fanout.py  test_inject.py  test_run.py
