[project]
name = "dagler"
version = "0.0.2"
description = "DAG pipeline orchestration built on qler + sqler"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gabu", email = "gabu@gabu.quest"},
]
keywords = ["dag", "pipeline", "orchestration", "sqlite", "qler", "sqler", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
    "qler",
    "sqler",
]

[project.urls]
Homepage = "https://github.com/gabu-quest/dagler"
Repository = "https://github.com/gabu-quest/dagler"
"Bug Tracker" = "https://github.com/gabu-quest/dagler/issues"

[project.scripts]
dagler = "dagler.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff==0.12.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src/dagler"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["N", "E501", "F841"]
"benchmarks/**/*" = ["N", "E501", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
